--- a/hw-1/index.html
+++ b/hw-1/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hw-1</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <title>hw-2</title>
   </head>
   <body>
-    <p>Hello, world)</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facilis
+      perferendis quaerat beatae minus ad pariatur qui eum? Harum reprehenderit
+      accusamus, a officia nisi sequi nostrum? Ullam est ea in!
+    </p>
   </body>
 </html>
